[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/main_menu.gd" type="Script" id=1]

[node name="main_menu" type="Node2D"]
script = ExtResource( 1 )

[node name="menu" type="Control" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="play_button" type="Button" parent="menu"]
margin_left = 126.0
margin_top = 454.0
margin_right = 342.0
margin_bottom = 508.0
text = "play"

[node name="quit_button" type="Button" parent="menu"]
margin_left = 126.0
margin_top = 548.0
margin_right = 342.0
margin_bottom = 602.0
text = "quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="timer" type="Timer" parent="menu/quit_button"]
wait_time = 0.5
one_shot = true

[connection signal="pressed" from="menu/quit_button" to="." method="_quit_pressed"]
[connection signal="timeout" from="menu/quit_button/timer" to="." method="_quit_game"]
